cloudfn/manage_infra.yml
#This is to initiat Management Node
Description: 
  AWS EKS CapstoneCluster Management Security Group infrastructure Project Capstone OL

Parameters:
  EnvironmentName:
    Description: Environment resource name
    Type: String
  SSHKey:
    Description: SSH key
    Default: capstone
    Type: String
  AMI:
    Description: AMI OS Images
    Type: String

Resources:
  SecurityGroupInstance:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${EnvironmentName}-SecurityGroupManagement
      GroupDescription: Management allow ports
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3030
          ToPort: 3030
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9090
          ToPort: 9090
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9093
          ToPort: 9093
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9100
          ToPort: 9100
          CidrIp: 0.0.0.0/0

  ManagementNode1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SecurityGroups:
        - Ref: SecurityGroupInstance
      KeyName: !Ref SSHKey
      ImageId: !Ref AMI
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-managementNode1
        - Key: Project
          Value: !Ref EnvironmentName

  ManagementNode2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SecurityGroups:
        - Ref: SecurityGroupInstance
      KeyName: !Ref SSHKey
      ImageId: !Ref AMI
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-managementNode2
        - Key: Project
          Value: !Ref EnvironmentName
